# mobile-sandbox

./: .gitignore  .gitmodules  ASSET-MAP.md  BINARIES.md  Dockerfile  HANDOFF.md  MASTER-PLAN.md  README.md  RUNBOOK.md  SANDBOX-PLAN.md  SYSTEM-DESIGN.md  SYSTEM-STATE.md  UISpec.md  bootstrap  build-node-android.sh  build.gradle  build_all_assets.py  entrypoint.sh  s3_cached_container_build.py  settings.gradle  terminal-core-cleanup.patch
.github/workflows/: build-apk.yml  deploy-pages.yml
app/: build.gradle
app/src/androidTest/java/com/cory/app/: TerminalSmokeTest.kt  TerminalUiSmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_main.cpp  cory_jni.cpp  cory_python_module.cpp  libcory.map.txt  liborderfiledemo.map.txt  orderfile.cpp
app/src/main/cpp/git_extras/: worktree.c
app/src/main/java/com/cory/app/: ComposeSandboxActivity.kt  CoryTerminalRuntime.kt
app/src/main/java/com/example/orderfiledemo/: MainActivity.java
app/src/main/java/com/example/orderfiledemo/compose/: ComposeSandboxActivity.kt  ComposeSandboxActivity.kt.txt  CoryTerminalRuntime.kt
app/src/main/python/: cory_bootstrap.py  cory_process.py  cory_runtime.py  cory_sandbox.py  sitecustomize.py
app/src/main/res/drawable/: cory_backdrop.xml  cory_panel.xml  cory_status_block.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
codebuild/android-full/: buildspec.yml  pick_newest_android_device.py  post_build_publish.sh
codebuild/node/: EC2-REBUILD.md  build-node-android.sh  ec2-rebuild-node24-android.sh
codebuild/node/patches/: v8-android-execinfo.patch
docker/android-build/: entrypoint.sh
docs/: index.html
gradle/: libs.versions.toml
infrastructure/cloudformation/: cory-android-ci-manual-s3.yaml
rust/cory_rust/: Cargo.toml
rust/cory_rust/src/: lib.rs
scripts/: build_all_assets.py  cory_build.py  cory_e2e_test.py  ec2_start_codebuild.sh  fetch_prebuilt_assets.py  pack_codebuild_source.sh  package_shell_deps.py  python.ps1  s3_cached_container_build.py  smoke-test.sh  trigger_cory_codebuild.sh
scripts/devicefarm/: inner-smoke.sh  run.py  run_instrumentation.py  test-spec.yml
terminal/: build.gradle.kts
terminal/src/main/: AndroidManifest.xml
terminal/src/main/aidl/com/ai/assistance/operit/terminal/: CommandExecutionEvent.aidl  ITerminalCallback.aidl  ITerminalService.aidl  SessionDirectoryEvent.aidl
terminal/src/main/java/com/ai/assistance/operit/terminal/: CommandExecutionEvent.kt  Pty.kt  SessionManager.kt  SessionTranscriptEvent.kt  TerminalBootstrap.kt  TerminalEnv.kt  TerminalManager.kt  TerminalSession.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/data/: TerminalModels.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/main/: TerminalScreen.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/provider/type/: LocalTerminalProvider.kt  TerminalProvider.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/service/: TerminalService.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/tui/: ScreenRegion.kt  TuiBridgeView.kt  TuiScraper.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/ui/: AgentBlock.kt  AgentUiState.kt  AgentView.kt  CoryScaffold.kt  InputBar.kt  SessionTabs.kt  TerminalPane.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/ui/blocks/: AgentTextBlock.kt  CommandBlock.kt  DiffBlock.kt  ErrorBlock.kt  UserPromptBlock.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/view/: SyntaxHighlighter.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/view/canvas/: CanvasTerminalCompose.kt  CanvasTerminalView.kt  ExtraKeysBar.kt  GestureHandler.kt  PerformanceOptimizer.kt  RenderConfig.kt  TerminalAccessibilityDelegate.kt  TerminalTabRenderItem.kt  TextMetrics.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/view/domain/: OutputProcessor.kt
terminal/src/main/java/com/ai/assistance/operit/terminal/view/domain/ansi/: AnsiColorUtils.kt  AnsiScanner.kt  AnsiSequence.kt  AnsiTerminalEmulator.kt
terminal/src/main/jni/: CMakeLists.txt  pty.c
terminal/src/main/res/values/: strings.xml
wrappers/: README.md  python.c
